--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@swimlane/ngx-charts": "^7.0.1",
-    "bootstrap": "^4.0.0-beta.3",
-    "browserslist": "^2.11.1",
+    "bootstrap": "4.0.0-beta.2",
     "core-js": "^2.5.3",
     "date-fns": "^1.29.0",
     "hammerjs": "^2.0.8",
