--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@swimlane/ngx-charts": "^7.0.1",
-    "bootstrap": "4.0.0-beta.3",
+    "bootstrap": "^4.0.0-beta.3",
     "core-js": "^2.5.3",
     "date-fns": "^1.29.0",
     "hammerjs": "^2.0.8",
@@ -33,7 +33,7 @@
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "^1.6.4",
+    "@angular/cli": "^1.7.0-beta.0",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
     "@types/jasmine": "^2.8.3",
