--- a/package.json
+++ b/package.json
@@ -13,18 +13,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.0",
-    "@angular/cdk": "^5.0.4",
-    "@angular/common": "^5.2.0",
-    "@angular/compiler": "^5.2.0",
-    "@angular/core": "^5.2.0",
-    "@angular/forms": "^5.2.0",
-    "@angular/material": "^5.0.4",
-    "@angular/platform-browser": "^5.2.0",
-    "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/router": "^5.2.0",
+    "@angular/animations": "^5.2.2",
+    "@angular/cdk": "^5.1.1",
+    "@angular/common": "^5.2.2",
+    "@angular/compiler": "^5.2.2",
+    "@angular/core": "^5.2.2",
+    "@angular/forms": "^5.2.2",
+    "@angular/material": "^5.1.1",
+    "@angular/platform-browser": "^5.2.2",
+    "@angular/platform-browser-dynamic": "^5.2.2",
+    "@angular/router": "^5.2.2",
     "@swimlane/ngx-charts": "^7.0.1",
-    "bootstrap": "^4.0.0-beta.3",
+    "bootstrap": "^4.0.0",
     "core-js": "^2.5.3",
     "date-fns": "^1.29.0",
     "hammerjs": "^2.0.8",
@@ -33,22 +33,22 @@
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.0-beta.0",
-    "@angular/compiler-cli": "^5.2.0",
-    "@angular/language-service": "^5.2.0",
-    "@types/jasmine": "^2.8.3",
+    "@angular/cli": "^1.7.0-beta.2",
+    "@angular/compiler-cli": "^5.2.2",
+    "@angular/language-service": "^5.2.2",
+    "@types/jasmine": "^2.8.6",
     "@types/jasminewd2": "^2.0.2",
-    "@types/node": "^8.5.8",
-    "codelyzer": "^4.0.1",
-    "jasmine-core": "^2.8.0",
+    "@types/node": "^8.5.9",
+    "codelyzer": "^4.1.0",
+    "jasmine-core": "^2.9.1",
     "jasmine-spec-reporter": "^4.2.1",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-coverage-istanbul-reporter": "^1.4.1",
     "karma-jasmine": "^1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^5.2.2",
+    "protractor": "^5.3.0",
     "ts-node": "^3.3.0",
     "tslint": "^5.9.1",
     "typescript": "^2.6.2"
